--- a/_posts/2012-11-02-198.md
+++ b/_posts/2012-11-02-198.md
@@ -6,6 +6,8 @@ author: Marco Molteni
 layout: post
 guid: http://molteni.wordpress.com/?p=198
 permalink: /2012/11/02/198/
+redirect_to:
+- https://www.ngjava.com/multiple-persistence-units-in-persistence-xml-using-eclipselink/
 jabber_published:
   - "1351857833"
 publicize_reach:
