--- a/_posts/2018-12-05-jconf.md
+++ b/_posts/2018-12-05-jconf.md
@@ -1,13 +1,13 @@
 ---
-title: ''
-description: ''
+title: '...'
+description: '...s'
 date: 2018-12-05T10:41:48+00:00
 author: Marco Molteni
 layout: post
 main-class: 'javaee'
 color: '#7AAB13'
 permalink: /jconf/
-published:false
+published: false
 categories:
   - Java EE
 tags:
