--- a/_posts/2018-12-05-jconf.md
+++ b/_posts/2018-12-05-jconf.md
@@ -15,14 +15,14 @@ tags:
  
 image: '/assets/img/'
 
-introduction: 'How to store the configuration in external files?'
+introduction: 'Are our applications too complicated?'
 ---
 
 ## use the framework
 
 (work in progress)
 
-This page will explain how to use our 'standard' tools to easily build modern web applications.
+This page will explain how to use our 'standard' tools to easily and quickly build modern web applications.
 
 We are using:
 
@@ -32,15 +32,59 @@ We are using:
 
 The target of this description are start-up and companies with one or few products that don't want to create a gas factory with useless frameworks.
 
-# no frameworks? kubernetes?
+# the use of framework is an antipattern, avoid them
 
-Often we build too complicated solutions that don't last long.
+Frameworks are useful when a technology is at the beginning and a lot of features are missing. The goal of frameworks is to fill the missing parts fast and temporarily waiting that the base technology integrates the missing features.
 
-We try to avoid Angular and React. In my professional experience Angular has been super productive until when one of the component didn't break (upgrade).
+Unfortunately the frameworks want to become big stars and they don't help anymore the base technology they want to extend it at the cost of the technology itself.
 
-For the public website SPA are not good enough. S.E.O. problems, performances etc.
+I worked for a client that was using Angular (a framework) and Spring (a framework), on top of these they built their own backend and frontend frameworks and they rewrote some Javascript basic features because 'not good'.
+The complexity of the architecture is paid with slow development and complex upgrades. I see often these internal solutions. After few years everything enter in maintenance mode, the unlucky devs they spend their days repairing breaking parts and the luckiest work on new projects with the latest kids on the block.
 
-Javascript is very good for applications with 'normal' complexity.
+I worked on a project that broke with the automatic update from AngularJS 1.5.9 to 1.5.10 (!!!) because of breaking changes in a minor version.
 
-Kubernetes and similar are very good when you have hundreds of projects and 2 or 3 full time administrators. For product oriented companies is expensive and not productive.
+Another project is blocked with the version 5 of Angular because some dependencies changed the import system with the version 6.
 
+
+> we dont' have the time/money to rewrite our development every 6 months only because one of the frameworks want to be the coolest on the market 
+
+### java
+
+In the Java world we have experienced Struts as glue between JSP and Servlets and Spring as reaction to the old-EJBs.
+Struts lasted a decade and maybe more, Spring evolved and today counts at least 25 different projects, Octopus-style.
+
+### frontend
+In the frontend world React and AngularJS filled the missing part in the HTML/Javascript development. AngularJS became a 'monster' and died leaving a lot of projects in a zombie status.
+Today React, Vue and the new Angular they are fighting to conquer the frontend developers.
+
+All these projects are splitting the developers' community, these frameworks solve only a few problems of the 'standard' but they create numerous new issues that require new extensions.
+E.g. SPA frameworks:
+- are less fast than standard technologies
+- use non-standard languages
+- they don't work well with search engines (S.E.O.)
+- they don't respect the standards
+- they or their components break the compatibility with previous versions
+- they have tons of dependencies with the risk of low quality / not upgradable parts
+
+### cloud and deployment
+
+kubernetes is cool and an excellent choice ... when you have 150 projects and 5 dedicated integrators and system adm.
+
+Most of the business have 1 to 5 software in production, a simple war deployed in an application server is faster and cheaper to use than a cluster in kubernetes.
+
+With Jelastic, as first configuration, i need:
+- 1 click to deploy the application server
+- 1 click to deploy the application
+- 1 click to deploy the ngingx proxy / load balancer
+- 1 click to install the certificate for my https server
+
+Try to do the same with Kubernetes / EC2 / whatever ...
+
+
+# we want to use standards
+
+For Java we use JakartaEE. This technology is supported by the biggest Java players (Oracle, IBM, Pivotal) and other important business players (SAP, Microsoft).
+
+No other Java technology has so many IT relevant players.
+
+For the frontend we use vanilla Javascript (ES6), HTML5 and CSS3. We want to avoid to download 400MB of dependencies only to write 'Hello World'.
