--- a/_posts/2018-12-05-jconf.md
+++ b/_posts/2018-12-05-jconf.md
@@ -1,6 +1,6 @@
 ---
-title: '...'
-description: '...s'
+title: 'JConf: an application built with standards'
+description: 'Are our applications too complicate?'
 date: 2018-12-05T10:41:48+00:00
 author: Marco Molteni
 layout: post
@@ -24,7 +24,7 @@ introduction: 'Are our applications too complicated?'
 
 This page will explain how to use our 'standard' tools to easily and quickly build modern web applications.
 
-We are using:
+To build [https://www.jconf.org](https://www.jconf.org) we are using:
 
 - Java EE / Jakarta EE for the backend development
 - HTML 5 / Javascript (ES 6) / CSS 3 for the frontend
@@ -32,39 +32,42 @@ We are using:
 
 The target of this description are start-up and companies with one or few products that don't want to create a gas factory with useless frameworks.
 
-# the use of framework is an antipattern, avoid them
+# the use of frameworks is an antipattern, avoid them
 
 Frameworks are useful when a technology is at the beginning and a lot of features are missing. The goal of frameworks is to fill the missing parts fast and temporarily waiting that the base technology integrates the missing features.
 
 Unfortunately the frameworks want to become big stars and they don't help anymore the base technology they want to extend it at the cost of the technology itself.
 
-I worked for a client that was using Angular (a framework) and Spring (a framework), on top of these they built their own backend and frontend frameworks and they rewrote some Javascript basic features because 'not good'.
+I worked for a client that was using Angular (a framework) and Spring (a framework), on top of these they built their own backend and frontend frameworks and they rewrote some Javascript basic features because they are 'not good'.
+
 The complexity of the architecture is paid with slow development and complex upgrades. I see often these internal solutions. After few years everything enter in maintenance mode, the unlucky devs they spend their days repairing breaking parts and the luckiest work on new projects with the latest kids on the block.
 
-I worked on a project that broke with the automatic update from AngularJS 1.5.9 to 1.5.10 (!!!) because of breaking changes in a minor version.
+I worked on a project that broke with the update from AngularJS 1.5.9 to 1.5.10 (!!!) because of breaking changes in a minor version.
 
 Another project is blocked with the version 5 of Angular because some dependencies changed the import system with the version 6.
 
 
-> we dont' have the time/money to rewrite our development every 6 months only because one of the frameworks want to be the coolest on the market 
+_we don't have the time/money to rewrite our development every 6 months only because one of the frameworks want to be the coolest on the market_
 
 ### java
 
-In the Java world we have experienced Struts as glue between JSP and Servlets and Spring as reaction to the old-EJBs.
+In the Java world we have experienced Struts as glue between JSP and Servlets and Spring as reaction to the old-EJBs complexity.
 Struts lasted a decade and maybe more, Spring evolved and today counts at least 25 different projects, Octopus-style.
 
 ### frontend
 In the frontend world React and AngularJS filled the missing part in the HTML/Javascript development. AngularJS became a 'monster' and died leaving a lot of projects in a zombie status.
-Today React, Vue and the new Angular they are fighting to conquer the frontend developers.
+Today React, Vue and the new Angular are fighting to conquer the frontend developers.
 
 All these projects are splitting the developers' community, these frameworks solve only a few problems of the 'standard' but they create numerous new issues that require new extensions.
 E.g. SPA frameworks:
 - are less fast than standard technologies
 - use non-standard languages
-- they don't work well with search engines (S.E.O.)
-- they don't respect the standards
+- don't work well with search engines (S.E.O.)
+- don't respect the standards
 - they or their components break the compatibility with previous versions
-- they have tons of dependencies with the risk of low quality / not upgradable parts
+- have tons of dependencies with the risk of low quality / not upgradable parts
+
+Don't forget what happened (funny story): [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](https://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos/)
 
 ### cloud and deployment
 
@@ -81,10 +84,10 @@ With Jelastic, as first configuration, i need:
 Try to do the same with Kubernetes / EC2 / whatever ...
 
 
-# we want to use standards
+### we want to use standards that won't break in 6 months
 
 For Java we use JakartaEE. This technology is supported by the biggest Java players (Oracle, IBM, Pivotal) and other important business players (SAP, Microsoft).
 
-No other Java technology has so many IT relevant players.
+No other Java technology has so many IT relevant players involved.
 
 For the frontend we use vanilla Javascript (ES6), HTML5 and CSS3. We want to avoid to download 400MB of dependencies only to write 'Hello World'.
