--- a/_posts/2018-12-05-jconf.md
+++ b/_posts/2018-12-05-jconf.md
@@ -69,6 +69,10 @@ E.g. SPA frameworks:
 
 Don't forget what happened (funny story): [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](https://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos/)
 
+Some interesting videos:
+ - [The creator of Django against framworks](https://www.youtube.com/watch?v=k7n2xnOiWI8&t=3s)
+ - [Rise Above The Framework](https://www.youtube.com/watch?v=HiE7FmIKOQ0&t=348s)
+
 ### cloud and deployment
 
 kubernetes is cool and an excellent choice ... when you have 150 projects and 5 dedicated integrators and system adm.
