--- a/_posts/2018-12-05-jconf.md
+++ b/_posts/2018-12-05-jconf.md
@@ -32,7 +32,7 @@ To build [https://www.jconf.org](https://www.jconf.org) we are using:
 
 The target of this description are start-up and companies with one or few products that don't want to create a gas factory with useless frameworks.
 
-# the use of frameworks is an antipattern, avoid them
+## the use of frameworks is an antipattern, avoid them
 
 Frameworks are useful when a technology is at the beginning and a lot of features are missing. The goal of frameworks is to fill the missing parts fast and temporarily waiting that the base technology integrates the missing features.
 
