--- a/_posts/2019-01-10-hashmap.md
+++ b/_posts/2019-01-10-hashmap.md
@@ -16,20 +16,20 @@ image: '/assets/img/'
 
 introduction: 'Why is better to define the HashMap initial size'
 ---
-## No argument constructor = no way ...
+## No argument constructor ...
 
-In Java is a good practice to initialize collections (maps, list, ...).
+In Java is a good practice to initialize the initial capacity of collections and maps.
 
 Many developers (me included) have the habit to declare a new Collection or Map using the no argument constructor, e.g.:
 
 `Map exampleMap = new HashMap();`
 
-With this instruction Java initialize a new HashMap object with the attribute `loadFactor` at 0.75 and the `DEFAULT_INITIAL_CAPACITY` at 16.
+With this instruction Java initializes a new HashMap object with the attribute `loadFactor` at 0.75 and the `DEFAULT_INITIAL_CAPACITY` at 16.
 
-The HashMap stores his values in an array of HashMap$Node objects (at least until when the size doesn't become too big).
+The HashMap stores internally his values in an array of HashMap$Node objects (at least until when the size doesn't become too big).
 
-The initialization doesn't create yet the array, it will be generated only with the first insert (e.g. `put`),
- Java will instantiate the internal array with something like: `Node<K,V>[] tab = (Node<K,V>[])new Node[16]`.
+The initialization doesn't create yet the array, it will be instantiated only with the first insert in the map (e.g. using `put`),
+ Java will create the internal array with something like: `Node<K,V>[] tab = (Node<K,V>[])new Node[16]`.
 
 ## ... it will grow
 
@@ -45,7 +45,7 @@ The values of the current bucket array are 'transferred' in the new array, the n
 
 The table shows how the the size of the bucket array grows adding new entries.
 
-The rehashing `resize()` requires computational power and should be avoided if possible.
+The rehashing done in  `resize()` requires computational power and should be avoided if possible.
 
 |# of inserts .put(K,V)|resize() calls|bucket array size|Threshold|
 |---|---|---|---|
@@ -65,10 +65,11 @@ The rehashing `resize()` requires computational power and should be avoided if p
 
 ## defining the initial size in the constructor
 
-You have 100 entries and not one more? `new HashMap(100)` will generate a bucket array of 'only' 100 nodes?
+You have a defined number or entries or you know what should be the number of values that the map will contain, then it's recommended to set thee 'initial capacity' accordingly.
 
-Yes, if you define an initial size for your HashMap the bucket array will have the defined size.
-The size of the threshold is calculated with the following algorithm:
+Example you will have 100 entries and not one more? `new HashMap(100)` will generate a bucket array of only 100 nodes without the need of rehashing during the insert. 
+
+If the initial capacity is defined using the constructor the size of the threshold is calculated using the following algorithm:
 
 ```java
 /**
@@ -83,7 +84,7 @@ static final int tableSizeFor(int cap) {
 
 If your map won't grow more than the initial size, there won't be rehashing of your data.
 
-This solution is optimal if you know the size of the HashMap. 
+This solution is optimal if you know the maximum size of the HashMap. 
 
 ### General tip from the code source
 > The expected number of entries in the map and its load factor should be taken into account when
