--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -14,13 +14,11 @@ tags:
  
 image: '/assets/img/'
 
-introduction: 'Collectors Teeing examples'
+introduction: 'Collectors Teeing examples. A Java 12 new feature!'
 ---
 ## Collectors Teeing in action
 
-Java Documentation
-
-[Collectors#teeing](https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/util/stream/Collectors.html)
+Java Documentation: [Collectors#teeing](https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/util/stream/Collectors.html)
 
 _Returns a Collector that is a composite of two downstream collectors. Every element passed to the resulting collector is processed by both downstream collectors, then their results are merged using the specified merge function into the final result._
 
