--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -18,9 +18,24 @@ introduction: 'Collectors Teeing examples. A Java 12 new feature!'
 ---
 ## Collectors Teeing in action
 
+[Documentation](#documentation)
+
+[Fun facts](#fun-facts)
+
+[Example: Guest list example](#guest-list)
+
+[Example: Filter names in two different lists](#filter-names-in-two-different-lists)
+
+[Example: Count and sum a stream of integer](#count-and-sum-a-stream-of-integer)
+
+[Pitfalls](#pitfalls)
+
+## Documentation
+
 Java Documentation: [Collectors#teeing](https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/util/stream/Collectors.html)
 
 _Returns a Collector that is a composite of two downstream collectors. Every element passed to the resulting collector is processed by both downstream collectors, then their results are merged using the specified merge function into the final result._
+
 
 
 ## Fun facts
@@ -59,6 +74,7 @@ We want to know who is going participate and the total number of participants.
 ```java
 var result =
   Stream.of(
+  // Guest(String name, boolean participating, Integer participantsNumber)
   new Guest("Marco", true, 3),
   new Guest("David", false, 2),
   new Guest("Roger",true, 6))
