--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -14,9 +14,9 @@ tags:
  
 image: '/assets/img/'
 
-introduction: 'Collectors Teeing examples. A Java 12 new feature!'
+introduction: 'Teeing collector examples. A Java 12 new feature!'
 ---
-## Collectors Teeing in action
+## Teeing collector in action
 
 [Documentation](#documentation)
 
@@ -36,6 +36,10 @@ Java Documentation: [Collectors#teeing](https://docs.oracle.com/en/java/javase/1
 
 _Returns a Collector that is a composite of two downstream collectors. Every element passed to the resulting collector is processed by both downstream collectors, then their results are merged using the specified merge function into the final result._
 
+Signature
+
+`static <T,​R1,​R2,​R>
+ Collector<T,​?,​R> teeing​(Collector<? super T,​?,​R1> downstream1, Collector<? super T,​?,​R2> downstream2, BiFunction<? super R1,​? super R2,​R> merger)`
 
 
 ## Fun facts
