--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -1,5 +1,5 @@
 ---
-title: 'Collectors Teeing'
+title: 'Teeing Collector'
 description: 'Java 12 - New feature'
 date: 2019-03-23T01:41:48+00:00
 author: Marco Molteni
@@ -14,9 +14,9 @@ tags:
  
 image: '/assets/img/'
 
-introduction: 'Teeing collector examples. A Java 12 new feature!'
+introduction: 'Teeing Collector examples. A Java 12 new feature!'
 ---
-## Teeing collector in action
+## Teeing Collector in action
 
 [Documentation](#documentation)
 
