--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -219,6 +219,8 @@ Pair in Apache Utils uses Map.Entry, for this reason has to be avoided.
 
 ## Everything about Java 12
 
+You can find more information and fun facts in this presentation
+
 <p><a href="https://speakerdeck.com/marcomolteni/java-12-new-features-in-action"><img src="/assets/img/uploads/2019/twitter_java_12.jpg" alt="" /></a></p>
 
 [https://speakerdeck.com/marcomolteni/java-12-new-features-in-action](https://speakerdeck.com/marcomolteni/java-12-new-features-in-action)
