--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -26,7 +26,7 @@ introduction: 'Teeing Collector examples. A Java 12 new feature!'
 
 [Example: Filter names in two different lists](#filter-names-in-two-different-lists)
 
-[Example: Count and sum a stream of integer](#count-and-sum-a-stream-of-integer)
+[Example: Count and sum a stream of integers](#count-and-sum-a-stream-of-integers)
 
 [Pitfalls](#pitfalls)
 
@@ -165,7 +165,7 @@ var result =
   System.out.println(result); // -> [[Devoxx, Voxxed Days], [Code One, Basel One]]
 ```
 
-## Count and sum a stream of integer
+## Count and sum a stream of integers
 
 Maybe you saw a similar example circulating on blogs giving merging sum and count to give the average.
 
@@ -188,7 +188,7 @@ var result =
   System.out.println(result); // -> {count=4, sum=57}
 ```
 
-The result class
+The Result class
 
 ```java
 class Result {
@@ -213,9 +213,9 @@ class Result {
 ### Map.Entry
 Many examples use Map.Entry to store the result of the BiFunction.
 
-Please don't do this you are not storing a Map. Java Core doesn't have a standard object to store 2 values, you have to create it by yourself.
+Please don't do this, because you are not storing a Map. Java Core doesn't have a standard object to store 2 values, you have to create it by yourself.
 
-Pair in Apache Utils uses Map.Entry, for this reason has to be avoided.
+Pair in Apache Utils uses Map.Entry, for this reason is not a valid alternative.
 
 ## Everything about Java 12
 
