--- a/_posts/2019-03-23-teeing.md
+++ b/_posts/2019-03-23-teeing.md
@@ -88,7 +88,8 @@ var result =
        // whe want to collect only the first name in a list
        Collectors.mapping(o -> o.name, Collectors.toList())),
        // second collector, we want the total number of participants
-       Collectors.summingInt(Guest::getParticipantsNumber),
+    Collectors.filtering(Guest::isParticipating,
+        Collectors.summingInt(Guest::getParticipantsNumber)),
        // we merge the collectors in a new Object,
        // the values are implicitly passed
        EventParticipation::new
@@ -98,7 +99,7 @@ var result =
   
   // Result
   // EventParticipation { guests = [Marco, Roger],
-  // total number of participants = 11 }
+  // total number of participants = 9 }
 
 ```
 
